Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19581

llog_cat_reverse_process_cb() must not process non-existing llog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      [   37.375923] LustreError: 7976:0:(llog_cat.c:412:llog_cat_id2handle()) lustre-MDD0000: error opening log id [0x1:0x8:0x0]: rc = -2
      [   37.375985] BUG: unable to handle kernel NULL pointer dereference at 0000000000000140
      [   37.376003] PGD 14fcbc067 P4D 14fcbc067 PUD 14fcbd067 PMD 0 
      [   37.376042] Oops: 0000 [#1] PREEMPT SMP
      [   37.376079] CPU: 0 PID: 7976 Comm: mount.lustre Tainted: G        W  O      -------- -  - 4.18.0 #3
      [   37.376151] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-5.fc42 04/01/2014
      [   37.376192] RIP: 0010:llog_reverse_process+0x11/0xab0 [obdclass]
      [   37.376329] Code: 10 05 00 48 8d 7b 28 e8 6d 08 f4 d1 89 e8 48 83 c4 38 5b 5d 41 5c c3 66 90 41 57 41 56 41 55 41 54 55 53 4c 89 c3 48 83 ec 48 <48> 8b ae 40 01 00 00 f6 05 d5 c5 ee ff 01 48 89 7c 24 08 48 89 34
      [   37.376532] RSP: 0018:ffff946ee8cbb7a0 EFLAGS: 00010286
      [   37.376599] RAX: 0000000000000000 RBX: 0000000000000000 RCX: ffff946eca598400
      [   37.376699] RDX: ffffffffc0d036c0 RSI: 0000000000000000 RDI: ffff946ee8cbbb48
      [   37.376798] RBP: ffff946ee8cbbb48 R08: 0000000000000000 R09: ffff946ea528d1dc
      [   37.376899] R10: ffff946ea528e000 R11: ffff946ea528d1f9 R12: ffff946eb157a800
      [   37.377031] R13: ffff946ee8cbb8f8 R14: ffff946e9b2f4000 R15: ffff946e9b2f4038
      [   37.377131] FS:  00007f1c678e28c0(0000) GS:ffff946fd0800000(0000) knlGS:0000000000000000
      [   37.377269] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [   37.377367] CR2: 0000000000000140 CR3: 000000010e04b000 CR4: 0000000000350eb0
      [   37.377467] Call Trace:
      [   37.377501]  ? __die_body+0x15/0x60
      [   37.377564]  ? no_context+0x12a/0x290
      [   37.377629]  ? __kvm_handle_async_pf+0xc/0x70
      [   37.377696]  ? page_fault+0x1e/0x30
      [   37.377731]  ? changelog_user_detect_orphan_cb+0x1c0/0x1c0 [mdd]
      [   37.377829]  ? llog_reverse_process+0x11/0xab0 [obdclass]
      [   37.377911]  ? llog_cancel_rec+0x17/0x20 [obdclass]
      [   37.377977]  llog_cat_reverse_process_cb+0xaf/0x1c0 [obdclass]
      [   37.378077]  llog_reverse_process+0x6a0/0xab0 [obdclass]
      [   37.378142]  ? llog_cat_size_cb+0x1c0/0x1c0 [obdclass]
      [   37.378209]  llog_cat_reverse_process+0x72/0x240 [obdclass]
      [   37.378315]  ? changelog_user_detect_orphan_cb+0x1c0/0x1c0 [mdd]
      [   37.378415]  ? changelog_user_detect_orphan_cb+0x1c0/0x1c0 [mdd]
      [   37.378514]  mdd_changelog_llog_init.cold.24+0x365/0x8d4 [mdd]
      [   37.378613]  mdd_prepare.part.21+0x251/0x1b70 [mdd]
      [   37.378679]  mdt_prepare+0x45/0x380 [mdt]
      [   37.378746]  server_start_targets+0x1c23/0x2be0 [obdclass]
      [   37.378814]  ? class_config_dump_handler+0x6b0/0x6b0 [obdclass]
      [   37.378915]  ? do_raw_spin_unlock+0x44/0xc0
      [   37.378977]  ? _raw_spin_unlock+0x24/0x40
      [   37.379043]  ? libcfs_debug_msg+0x9b1/0xbf0 [libcfs]
      [   37.379111]  ? libcfs_debug_msg+0x9b1/0xbf0 [libcfs]
      [   37.379210]  ? trace_hardirqs_on+0x1c/0xe0
      [   37.379282]  ? libcfs_log_return+0x19/0x20 [libcfs]
      [   37.379378]  ? lustre_start_mgc+0xb11/0x2270 [obdclass]
      [   37.379493]  server_fill_super+0x88a/0xff0 [obdclass]
      
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: