LU-19581 obdclass: llog processing to skip missing llogs

llog_cat_reverse_process_cb() should skip processing a missing plain
file, otherwise it just panics because the internal structures are
not initialized properly

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I72802122c8e5f1727b6e3486df5521b0f6289725
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62448
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>